<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipChange">


    <RadioGroup
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/change_tip_percent_button">


        <RadioButton
            android:id="@+id/low_tip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_tip_value" />

        <RadioButton
            android:id="@+id/med_tip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_tip_value" />

        <RadioButton
            android:id="@+id/big_tip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/big_tip_value" />

        <RadioButton
            android:id="@+id/generous_tip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generous_tip_value" />
    </RadioGroup>

    <Button
        android:id="@+id/change_tip_percent_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_tip_percent_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>