<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:backgroundTint="@color/off_white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        app:layout_constraintBottom_toTopOf="@id/subtotal_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtotal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/subtotal_edit_text"
        android:text="@string/subtotal_label"
        app:layout_constraintBottom_toTopOf="@+id/subtotal_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/subtotal_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/subtotal_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/subtotal_label"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/calculate_tip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/change_tip_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotal_edit_text" />

    <Button
        android:id="@+id/change_tip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/tip_change_button_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calculate_tip_button"
        app:layout_constraintTop_toBottomOf="@+id/subtotal_edit_text" />

    <TextView
        android:id="@+id/total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/total_label_text"
        app:layout_constraintStart_toStartOf="@+id/subtotal_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/subtotal_edit_text" />

    <TextView
        android:id="@+id/total"
        android:layout_width="222dp"
        android:layout_height="23dp"
        android:text="@string/total_placeholder_text"
        app:layout_constraintStart_toStartOf="@+id/total_label"
        app:layout_constraintTop_toBottomOf="@+id/total_label" />

</androidx.constraintlayout.widget.ConstraintLayout>